--- a/index.2.html
+++ b/index.2.html
@@ -5,11 +5,15 @@
   <meta name="description" content="Watch the latest anime, movies, and dramas dubbed in Hindi and more - only on DOOSH HUB!" />
   <meta name="keywords" content="anime, hindi anime, wind breaker, free streaming, dubbed anime" />
   <meta name="author" content="DOOSH HUB Team" />
-  <title>DOOSH HUB</title>  <!-- SEO: Open Graph -->  <meta property="og:title" content="DOOSH HUB - Hindi Dubbed Anime Streaming" />
+  <title>DOOSH HUB</title>
+  <!-- SEO: Open Graph -->
+  <meta property="og:title" content="DOOSH HUB - Hindi Dubbed Anime Streaming" />
   <meta property="og:description" content="Watch the latest anime, movies and dramas dubbed in Hindi on DOOSH HUB." />
   <meta property="og:image" content="https://www.dooshtoons.linkpc.net/photo/18815.jpg" />
   <meta property="og:url" content="https://www.dooshtoons.linkpc.net/index.2.html" />
-  <meta name="twitter:card" content="summary_large_image" />  <!-- JSON-LD Structured Data -->  <script type="application/ld+json">
+  <meta name="twitter:card" content="summary_large_image" />
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
@@ -21,7 +25,13 @@
       "query-input": "required name=search_term"
     }
   }
-  </script>  <!-- Tailwind & Config -->  <script src="https://cdn.tailwindcss.com"></script>  <script>tailwind.config = { darkMode: 'class' }</script>  <!-- Roboto Font -->  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">  <!-- Favicon -->  <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" sizes="32x32" />  <style>
+  </script>
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>tailwind.config = { darkMode: 'class' }</script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" sizes="32x32" />
+  <style>
     body { @apply bg-gray-900 text-white font-roboto overflow-x-hidden; }
     .dark body { @apply bg-gray-800; }
     header { @apply fixed top-0 left-0 w-full bg-black bg-opacity-50 flex flex-wrap items-center gap-4 p-4 z-50; }
@@ -33,8 +43,11 @@
     .anime-card-title { @apply absolute bottom-0 w-full bg-gradient-to-t from-black to-transparent text-center p-2 font-semibold; }
     #supportBtn { @apply bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-md; }
     #themeToggle { @apply bg-gray-700 hover:bg-gray-600 text-white px-3 py-1 rounded-md; }
-  </style></head>
-<body>  <!-- Loader -->  <div id="loader" class="fixed inset-0 bg-black flex items-center justify-center text-white text-3xl z-50">
+  </style>
+</head>
+<body>
+  <!-- Loader -->
+  <div id="loader" class="fixed inset-0 bg-black flex items-center justify-center text-white text-3xl z-50">
     Loading DOOSH HUB...
   </div>  <!-- Scroll to Top --><button id="scrollToTop" class="fixed bottom-4 right-4 bg-pink-600 text-white p-3 rounded-full hidden" onclick="scrollToTop()">↑</button>
 
@@ -46,34 +59,32 @@
     <button id="themeToggle" onclick="toggleTheme()">Toggle Theme</button>
     <button id="supportBtn" onclick="location.href='https://www.dooshtoons.linkpc.net/support.html'">Support Us</button>
     <a href="https://www.dooshtoons.linkpc.net/copyright.html" class="text-gray-300 hover:text-white">Contact Us</a>
-  </header>  <main>
-    <div class="text-center text-4xl font-bold mt-4">Welcome to DOOSH HUB!</div><!-- Main Carousel -->
-<section class="carousel-container">
-  <div id="carousel" class="flex overflow-x-auto space-x-4 p-4"></div>
-</section>
-
-<!-- Recommendations -->
-<section class="recommendations">
-  <h2 class="text-2xl font-semibold px-4">You Might Also Like</h2>
-  <div id="recommendations" class="flex overflow-x-auto space-x-4 p-4"></div>
-</section>
-
-<!-- Anime Grid -->
-<div id="animeList" class="anime-grid"></div>
-
-  </main>  <footer class="text-center text-gray-400 py-4">
-    &copy; 2025 DOOSH HUB. All rights reserved. <a href="https://www.dooshtoons.linkpc.net/copyright.html" class="underline">Copyright Info</a>
-  </footer>  <script>
-    // Theme Toggle
+  </header>  <!-- Main -->  <main>
+    <div class="text-center text-4xl font-bold mt-4">Welcome to DOOSH HUB!</div>
+    <section class="carousel-container">
+      <div id="carousel" class="flex overflow-x-auto space-x-4 p-4"></div>
+    </section>
+    <section class="recommendations">
+      <h2 class="text-2xl font-semibold px-4">You Might Also Like</h2>
+      <div id="recommendations" class="flex overflow-x-auto space-x-4 p-4"></div>
+    </section>
+    <div id="animeList" class="anime-grid"></div>
+  </main>  <!-- Footer -->  <footer class="text-center text-gray-400 py-4">
+    &copy; 2025 DOOSH HUB. All rights reserved.
+    <a href="https://www.dooshtoons.linkpc.net/copyright.html" class="underline">Copyright Info</a>
+  </footer>  <!-- Scripts -->  <script>
+    // Theme
     function toggleTheme() {
       const html = document.documentElement;
       if (html.classList.contains('dark')) {
-        html.classList.remove('dark'); localStorage.setItem('theme','light');
+        html.classList.remove('dark');
+        localStorage.setItem('theme', 'light');
       } else {
-        html.classList.add('dark'); localStorage.setItem('theme','dark');
+        html.classList.add('dark');
+        localStorage.setItem('theme', 'dark');
       }
     }
-    if (localStorage.getItem('theme')==='light') document.documentElement.classList.remove('dark');
+    if (localStorage.getItem('theme') === 'light') document.documentElement.classList.remove('dark');
 
     // Anime Data
     const animeData = [
@@ -93,7 +104,7 @@
       { id: 'fairy-tail-hi', title: 'Fairy Tail in Hindi All Episodes', cover: 'photo/unnamed (7).jpg', link: 'https://www.dooshtoons.linkpc.net/anime/fairy.html' }
     ];
 
-    // Get day-based seed to shuffle daily
+    // Shuffle utility
     function dailyShuffle(arr) {
       const seed = Math.floor(Date.now() / 86400000);
       let a = arr.slice();
@@ -114,25 +125,26 @@
 
     function loadCarousel() {
       const c = document.getElementById('carousel'); c.innerHTML = '';
-      animeData.forEach(item => c.appendChild(createCard(item)));
-      animeData.slice(0,2).forEach(item => c.appendChild(createCard(item)));
+      animeData.slice(0, 6).forEach(item => c.appendChild(createCard(item)));
     }
 
     let slideIndex = 0;
     function autoSlide() {
       const c = document.getElementById('carousel');
       const slides = c.children;
+      if (!slides.length) return;
       const w = slides[0].offsetWidth + 16;
       slideIndex++;
       c.style.transition = 'transform .7s';
       c.style.transform = `translateX(-${slideIndex * w}px)`;
-      if (slideIndex >= slides.length - 2) setTimeout(() => { c.style.transition='none'; c.style.transform='translateX(0)'; slideIndex=0; }, 700);
+      if (slideIndex >= slides.length - 2) {
+        setTimeout(() => { c.style.transition = 'none'; c.style.transform = 'translateX(0)'; slideIndex = 0; }, 700);
+      }
     }
 
     function loadRecommendations() {
       const r = document.getElementById('recommendations'); r.innerHTML = '';
-      const shuffled = dailyShuffle(animeData);
-      shuffled.slice(0,5).forEach(item => r.appendChild(createCard(item)));
+      dailyShuffle(animeData).slice(0, 5).forEach(item => r.appendChild(createCard(item)));
     }
 
     function loadAnimeGrid() {
@@ -149,12 +161,4 @@
     }
 
     function scrollToTop() { window.scrollTo({ top: 0, behavior: 'smooth' }); }
-    window.onscroll = () => document.getElementById('scrollToTop').style.display = (window.scrollY>200)?'block':'none';
-
-    window.onload = () => {
-      document.getElementById('loader').style.display = 'none';
-      loadCarousel(); loadRecommendations(); loadAnimeGrid();
-      setInterval(autoSlide, 2000);
-    };
-  </script></body>
-</html>
+    window.addEventListener('scroll', () => { document.getElementById('scrollToTop').style...
