--- a/index.2.html
+++ b/index.2.html
@@ -12,7 +12,7 @@
   <!-- Roboto Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <!-- Favicon -->
-  <link rel="icon" href="/assets/favicon.png" sizes="32x32" />
+  <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" sizes="32x32" />
   <style>
     body { background: #0f0f0f; color: #fff; font-family: 'Roboto', sans-serif; overflow-x: hidden; margin: 0; animation: fireGlow 10s infinite alternate; }
     @keyframes fireGlow {
