--- a/index.2.html
+++ b/index.2.html
@@ -1,130 +1,103 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Watch the latest anime, movies, and dramas dubbed in Hindi and more - only on DOOSH HUB!">
-  <meta name="keywords" content="anime, hindi anime, free streaming, dubbed anime">
+  <meta name="keywords" content="anime, hindi anime, wind breaker, free streaming, dubbed anime">
   <meta name="author" content="DOOSH HUB Team">
-  <title>DOOSH HUB</title>
-  <!-- Tailwind CSS CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Roboto Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <!-- Favicon -->
-  <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" sizes="32x32" />
-  <style>
-    body { background: #0f0f0f; color: #fff; font-family: 'Roboto', sans-serif; overflow-x: hidden; margin: 0; animation: fireGlow 10s infinite alternate; }
-    @keyframes fireGlow {
-      0% { background-color: #0f0f0f; box-shadow: 0 0 40px #ff00ff, inset 0 0 80px #ff4500; }
-      50% { background-color: #1a1a1a; box-shadow: 0 0 60px #ff4500, inset 0 0 100px #ff00ff; }
-      100% { background-color: #0f0f0f; box-shadow: 0 0 50px #ff00ff, inset 0 0 70px #ff4500; }
-    }
-    /* Hide scrollbar */
-    .no-scrollbar::-webkit-scrollbar { display: none; }
-    .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
-  </style>
-</head>
-<body class="relative">
+  <title>DOOSH HUB</title>  <!-- Tailwind CSS CDN -->  <script src="https://cdn.tailwindcss.com"></script>  <!-- Roboto Font -->  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">  <!-- Favicon -->  <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" sizes="32x32" />  <style>
+    body { background: #0f0f0f; color: #fff; font-family: 'Roboto', sans-serif; overflow-x: hidden; animation: fireGlow 10s infinite alternate; margin: 0; }
+    @keyframes fireGlow { 0% { background-color: #0f0f0f; box-shadow: 0 0 40px #ff00ff, inset 0 0 80px #ff4500; } 50% { background-color: #1a1a1a; box-shadow: 0 0 60px #ff4500, inset 0 0 100px #ff00ff; } 100% { background-color: #0f0f0f; box-shadow: 0 0 50px #ff00ff, inset 0 0 70px #ff4500; } }
+    header { position: fixed; top: 0; left: 0; width: 100%; background-color: rgba(0,0,0,0.6); display: flex; flex-wrap: wrap; align-items: center; gap: 1rem; padding: 1rem; z-index: 50; }
+    @keyframes pulse { 0%,100%{opacity:0.3;}50%{opacity:1;} }
+    #loader span { animation: pulse 1s infinite; }
+    .carousel-container { overflow: hidden; margin-top: 5rem; }
+    #carousel { display: flex; gap: 1rem; padding: 1rem; transition: transform 0.7s ease-in-out; }
+    .carousel-slide { flex:0 0 auto; width:100%; max-width:90vw; height:200px; border-radius:1rem; overflow:hidden; position:relative; }
+    @media (min-width:640px){ .carousel-slide{ height:260px; }}
+    @media (min-width:1024px){ .carousel-slide{ height:300px; }}
+    .carousel-slide img{ width:100%; height:100%; object-fit:cover; }
+    .carousel-caption{ position:absolute; bottom:0; left:0; width:100%; background:linear-gradient(to top,black,transparent); color:white; text-align:center; padding:0.5rem; font-weight:bold; }
+    .anime-grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(150px,1fr)); gap:1rem; padding:1rem; }
+    @media (min-width:1024px){ .anime-grid{ grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); }}
+    .anime-card{ position:relative; overflow:hidden; border-radius:1rem; box-shadow:0 4px 15px rgba(0,0,0,.3); transition:transform .3s; }
+    .anime-card:hover{ transform:translateY(-8px); box-shadow:0 8px 30px #ff00ff; border:2px solid #ff00ff; }
+    .anime-card img{ width:100%; height:240px; object-fit:cover; }
+    @media (min-width:640px){ .anime-card img{ height:260px; }}
+    .anime-card-title{ position:absolute; bottom:0; left:0; width:100%; background:linear-gradient(to top,black,transparent); color:white; text-align:center; padding:0.5rem; font-weight:600; }
+    #supportBtn { background-color: #10B981; padding: 0.5rem 1rem; border-radius: 0.5rem; font-weight: 600; }
+    #supportBtn:hover { background-color: #059669; }
+  </style></head>
+<body><!-- Loading Screen --><div id="loader" class="fixed inset-0 bg-black text-white flex items-center justify-center text-3xl z-[9999]">
+  <span>Loading DOOSH HUB...</span>
+</div><!-- Scroll to Top Button --><button id="scrollToTop" class="fixed bottom-4 right-4 bg-pink-600 text-white p-3 rounded-full text-xl hidden" onclick="scrollToTop()">↑</button>
 
-  <!-- Loader -->
-  <div id="loader" class="fixed inset-0 bg-black flex items-center justify-center text-3xl z-50">
-    <span class="text-white animate-pulse">Loading DOOSH HUB...</span>
-  </div>
+<!-- Header --><header>
+  <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 rounded-full"/>
+  <input id="search" type="text" placeholder="Search animes, movies, dramas..." class="flex-1 bg-gray-700 placeholder-gray-400 text-white rounded-lg px-3 py-2" oninput="filterAnime()"/>
+  <button id="supportBtn" onclick="location.href='support.html'">Support Us</button>
+</header><!-- Welcome Message --><div class="text-center mt-24 text-4xl font-bold mb-6">Welcome to DOOSH HUB!</div><!-- Carousel --><section class="carousel-container">
+  <div id="carousel"></div>
+</section><!-- Anime Grid --><main id="animeList" class="anime-grid"></main><!-- JavaScript --><script>
+  const animeData = {
+    "wind-breaker season 1": { title: "WIND BREAKER Season 1 in Hindi", cover: "photo/18815.jpg", link: "anime/windbreakerseason1.html" },
+    "Zom 100: Bucket List of the Dead": { title: "Zom 100: Bucket List of the Dead", cover: "photo/unnamed (2).jpg", link: "anime/bucket.html" },
+    "hunter x hunter": { title: "hunter x hunter", cover: "photo/hunter-x-hunter-6l28uunxtr53l0un.jpg", link: "anime/HUNTER×HUNTER.html" },
+    "Tokyo revengers both seasons in hindi ": { title: "Tokyo revengers both seasons in hindi ", cover: "photo/unnamed (6).jpg", link: "anime/tokyo.html" },
+    "Mushoku Tensei in hindi in hindi": { title: "Mushoku Tensei", cover: "photo/unnammmmmed.jpg", link: "anime/musoku.html" },
+    "spy x family ": { title: "spy x family", cover: "photo/unnamed (8).jpg", link: "anime/spy.html" },
+    "dandadan": { title: "dandadan", cover: "photo/unnamed (9).jpg", link: "anime/Dan.html" },
+    "Fairy tail  in english sub ": { title: " Fairy tail  in english sub", cover: "photo/unnamed (7).jpg", link: "anime/fairy2.html" },
+    "that time i reincarnated as slime in hindi": { title: "that time i reincarnated as slime in hindi", cover: "photo/that time i reincarnated as slime in hindi.png", link: "anime/that time i reincarnated as slime in hindi.html" },
+    "The Familiar of Zero [EN Sub]": { title: "The Familiar of Zero [EN Sub]", cover: "photo/The familer of zero.jpg", link: "anime/The Familiar of Zero [EN Sub].html" },
+    "Shikimori's Not Just a Cutie [English Sub]": { title: "Shikimori's Not Just a Cutie [English Sub]", cover: "photo/Shikanori is not just a cutie.jpg", link: "anime/Shikimori's Not Just a Cutie [English Sub].html" },
+    "Ragna crimson english sub": { title: "Ragna crimson english sub", cover: "photo/Ragna crimson english sub.jpg", link: "anime/Ragna crimson english sub.html" },
+    "Hayouka english sub": { title: "Hayouka english sub", cover: "photo/Hayouka english sub.jpg", link: "anime/Hyouka [English Sub].html" },
+    "Fairy tail  in Hindi all episodes ": { title: "Fairy tail  in Hindi all episodes ", cover: "photo/unnamed (7).jpg", link: "anime/fairy.html" }
+  };
 
-  <!-- Scroll to Top -->
-  <button id="scrollToTop" class="fixed bottom-4 right-4 bg-pink-600 text-white p-3 rounded-full text-xl hidden z-40" onclick="scrollToTop()">↑</button>
-
-  <!-- Header -->
-  <header class="fixed top-0 w-full bg-black bg-opacity-60 backdrop-blur flex flex-wrap items-center gap-4 p-4 z-30">
-    <img src="/assets/logo.png" alt="Doosh Hub Logo" class="w-10 h-10 md:w-12 md:h-12 rounded-full">
-    <input id="search" type="text" placeholder="Search animes, movies, dramas..." 
-      class="flex-1 min-w-[200px] bg-gray-700 placeholder-gray-400 text-white rounded-lg px-3 py-2" oninput="filterAnime()" />
-    <button id="supportBtn" onclick="location.href='support.html'" 
-      class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-lg font-semibold">
-      Support Us
-    </button>
-  </header>
-
-  <!-- Main Content -->
-  <main class="pt-24 px-4 md:px-8 lg:px-16">
-    <h1 class="text-center text-3xl md:text-4xl font-bold mb-6">Welcome to DOOSH HUB!</h1>
-
-    <!-- Carousel -->
-    <section class="carousel-container overflow-x-auto no-scrollbar flex gap-4 py-4">
-      <div id="carousel" class="flex gap-4"></div>
-    </section>
-
-    <!-- Anime Grid -->
-    <section id="animeList" class="grid gap-4 grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6"></section>
-  </main>
-
-  <!-- Scripts -->
-  <script>
-    const animeData = {
-      "wind-breaker season 1": { title: "WIND BREAKER Season 1 in Hindi", cover: "/photo/18815.jpg", link: "anime/windbreakerseason1.html" },
-      "zom 100: bucket list of the dead": { title: "Zom 100: Bucket List of the Dead", cover: "/photo/unnamed (2).jpg", link: "anime/bucket.html" },
-      "hunter x hunter": { title: "Hunter x Hunter", cover: "/photo/hunter-x-hunter-6l28uunxtr53l0un.jpg", link: "anime/HUNTER×HUNTER.html" },
-      "tokyo revengers both seasons in hindi": { title: "Tokyo Revengers (Both Seasons) in Hindi", cover: "/photo/unnamed (6).jpg", link: "anime/tokyo.html" },
-      "mushoku tensei": { title: "Mushoku Tensei in Hindi", cover: "/photo/unnammmmmed.jpg", link: "anime/musoku.html" },
-      "spy x family": { title: "Spy × Family", cover: "/photo/unnamed (8).jpg", link: "anime/spy.html" },
-      "dandadan": { title: "Dandadan", cover: "/photo/unnamed (9).jpg", link: "anime/Dan.html" },
-      "fairy tail english sub": { title: "Fairy Tail (English Sub)", cover: "/photo/unnamed (7).jpg", link: "anime/fairy2.html" },
-      "that time i reincarnated as slime": { title: "That Time I Got Reincarnated as a Slime in Hindi", cover: "/photo/that time i reincarnated as slime in hindi.png", link: "anime/that time i reincarnated as slime in hindi.html" },
-      "the familiar of zero [en sub]": { title: "The Familiar of Zero [EN Sub]", cover: "/photo/The familer of zero.jpg", link: "anime/The Familiar of Zero [EN Sub].html" },
-      "shikimori's not just a cutie [english sub]": { title: "Shikimori's Not Just a Cutie [English Sub]", cover: "/photo/Shikanori is not just a cutie.jpg", link: "anime/Shikimori's Not Just a Cutie [English Sub].html" },
-      "ragna crimson english sub": { title: "Ragna Crimson (English Sub)", cover: "/photo/Ragna crimson english sub.jpg", link: "anime/Ragna crimson english sub.html" },
-      "hyouka [english sub]": { title: "Hyouka [English Sub]", cover: "/photo/Hayouka english sub.jpg", link: "anime/Hyouka [English Sub].html" },
-      "fairy tail hindi all episodes": { title: "Fairy Tail in Hindi (All Episodes)", cover: "/photo/unnamed (7).jpg", link: "anime/fairy.html" }
-    };
-
-    function hideLoader() { document.getElementById('loader').style.display='none'; }
-    function initCarousel() {
-      const carousel = document.getElementById('carousel'); carousel.innerHTML = '';
-      Object.values(animeData).forEach(a => {
-        const slide = document.createElement('a');
-        slide.href = a.link;
-        slide.className = 'carousel-slide flex-shrink-0 w-[80vw] sm:w-[60vw] md:w-[40vw] lg:w-[30vw] h-48 md:h-60 rounded-xl overflow-hidden relative';
-        slide.innerHTML = `
-          <img src="${a.cover}" alt="${a.title}" class="w-full h-full object-cover" />
-          <div class="absolute bottom-0 left-0 w-full bg-gradient-to-t from-black to-transparent text-white text-center p-2 font-semibold">
-            ${a.title}
-          </div>`;
-        carousel.appendChild(slide);
-      });
-    }
-
-    function initGrid() {
-      const animeList = document.getElementById('animeList'); animeList.innerHTML = '';
-      Object.values(animeData).forEach(a => {
-        const card = document.createElement('a');
-        card.href = a.link;
-        card.className = 'anime-card group block rounded-lg overflow-hidden shadow-lg transform transition hover:-translate-y-2 relative';
-        card.innerHTML = `
-          <img src="${a.cover}" alt="${a.title}" class="w-full h-40 md:h-48 object-cover" />
-          <div class="absolute inset-x-0 bottom-0 bg-gradient-to-t from-black to-transparent p-2 text-center text-white font-medium group-hover:text-green-400">
-            ${a.title}
-          </div>`;
-        animeList.appendChild(card);
-      });
-    }
-
-    function filterAnime() {
-      const q = document.getElementById('search').value.toLowerCase();
-      document.querySelectorAll('#animeList a').forEach(c => {
-        const title = c.textContent.toLowerCase();
-        c.style.display = title.includes(q) ? 'block' : 'none';
-      });
-    }
-
-    function scrollToTop() { window.scrollTo({ top: 0, behavior: 'smooth' }); }
-    window.addEventListener('scroll', () => {
-      document.getElementById('scrollToTop').classList.toggle('hidden', window.scrollY < 200);
+  function loadCarousel() {
+    const carousel = document.getElementById('carousel'); carousel.innerHTML = '';
+    Object.values(animeData).forEach(a => {
+      const slide = document.createElement('a'); slide.href = a.link; slide.className = 'carousel-slide';
+      slide.innerHTML = `<img src="${a.cover}" alt="${a.title}" /><div class="carousel-caption">${a.title}</div>`;
+      carousel.appendChild(slide);
     });
-
-    window.addEventListener('load', () => {
-      setTimeout(() => { hideLoader(); initCarousel(); initGrid(); }, 1000);
+    Object.values(animeData).slice(0,2).forEach(a => {
+      const clone = document.createElement('a'); clone.href = a.link; clone.className = 'carousel-slide';
+      clone.innerHTML = `<img src="${a.cover}" alt="${a.title}" /><div class="carousel-caption">${a.title}</div>`;
+      carousel.appendChild(clone);
     });
-  </script>
-</body>
+  }
+
+  let slideIndex = 0;
+  function autoSlide() {
+    const carousel = document.getElementById('carousel'); const slides = carousel.querySelectorAll('.carousel-slide');
+    const slideWidth = slides[0].offsetWidth + 16; slideIndex++;
+    carousel.style.transition = 'transform 0.7s ease-in-out';
+    carousel.style.transform = `translateX(-${slideIndex*slideWidth}px)`;
+    if (slideIndex >= slides.length-2) setTimeout(() => { carousel.style.transition='none'; carousel.style.transform='translateX(0)'; slideIndex=0; },700);
+  }
+
+  function loadAnimeCards() {
+    const grid = document.getElementById('animeList'); grid.innerHTML='';
+    Object.values(animeData).forEach(a => {
+      const card = document.createElement('a'); card.href = a.link; card.className='anime-card';
+      card.innerHTML = `<img src="${a.cover}" alt="${a.title}"/><div class="anime-card-title">${a.title}</div>`;
+      grid.appendChild(card);
+    });
+  }
+
+  function filterAnime() {
+    const q = document.getElementById('search').value.toLowerCase();
+    document.querySelectorAll('.anime-card').forEach(c => {
+      const t = c.querySelector('.anime-card-title').innerText.toLowerCase();
+      c.style.display = t.includes(q)?'' :'none';
+    });
+  }
+
+  function scrollToTop() { window.scrollTo({ top:0, behavior:'smooth' }); }
+  window.onscroll = () => document.getElementById('scrollToTop').style.display=(window.scrollY>200)?'block':'none';
+  window.onload = () => setTimeout(()=>{ document.getElementById('loader').style.display='none'; loadCarousel(); loadAnimeCards(); setInterval(autoSlide,3000); },2500);
+</script></body>
 </html>
