--- a/index.2.html
+++ b/index.2.html
@@ -47,6 +47,7 @@
     "Mushoku Tensei in hindi in hindi": { title: "Mushoku Tensei", cover: "photo/unnammmmmed.jpg", link: "anime/musoku.html" },
     "spy x family ": { title: "spy x family", cover: "photo/unnamed (8).jpg", link: "anime/spy.html" },
     "dandadan": { title: "dandadan", cover: "photo/unnamed (9).jpg", link: "anime/Dan.html" },
+    "Cells at Work! [English Sub]": { title: "Cells at Work! [English Sub]", cover: "photo/Cells-at-work.avif", link: "anime/Cells at Work! [English Sub].html" },
     "Fairy tail  in english sub ": { title: " Fairy tail  in english sub", cover: "photo/unnamed (7).jpg", link: "anime/fairy2.html" },
     "that time i reincarnated as slime in hindi": { title: "that time i reincarnated as slime in hindi", cover: "photo/that time i reincarnated as slime in hindi.png", link: "anime/that time i reincarnated as slime in hindi.html" },
     "The Familiar of Zero [EN Sub]": { title: "The Familiar of Zero [EN Sub]", cover: "photo/The familer of zero.jpg", link: "anime/The Familiar of Zero [EN Sub].html" },
