--- a/index.2.html
+++ b/index.2.html
@@ -47,6 +47,8 @@
     "Mushoku Tensei in hindi in hindi": { title: "Mushoku Tensei", cover: "photo/unnammmmmed.jpg", link: "anime/musoku.html" },
     "spy x family ": { title: "spy x family", cover: "photo/unnamed (8).jpg", link: "anime/spy.html" },
     "dandadan": { title: "dandadan", cover: "photo/unnamed (9).jpg", link: "anime/Dan.html" },
+     "The World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat": { title: "The World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat", cover: "photo/the-worlds-finest-assassin-banner-image.webp", link: "anime/The World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat [English Sub].html" },
+     "Berserk of Gluttony": { title: "Berserk of Gluttony", cover: "photo/33359a587cfa74e4c2fa524ebc04b7a802d3b27b36cb5b24e0b9db8cb261a543.jpg", link: "anime/Berserk of Gluttony -  [English Sub].html" },
     "Cells at Work! [English Sub]": { title: "Cells at Work! [English Sub]", cover: "photo/Cells-at-work.avif", link: "anime/Cells at Work! [English Sub].html" },
     "Fairy tail  in english sub ": { title: " Fairy tail  in english sub", cover: "photo/unnamed (7).jpg", link: "anime/fairy2.html" },
     "that time i reincarnated as slime in hindi": { title: "that time i reincarnated as slime in hindi", cover: "photo/that time i reincarnated as slime in hindi.png", link: "anime/that time i reincarnated as slime in hindi.html" },
