--- a/index.2.html
+++ b/index.2.html
@@ -47,6 +47,18 @@
     "Mushoku Tensei in hindi in hindi": { title: "Mushoku Tensei", cover: "photo/unnammmmmed.jpg", link: "anime/musoku.html" },
     "spy x family ": { title: "spy x family", cover: "photo/unnamed (8).jpg", link: "anime/spy.html" },
     "dandadan": { title: "dandadan", cover: "photo/unnamed (9).jpg", link: "anime/Dan.html" },
+    "I Left My A-Rank Party - [EN Sub]": { title: "I Left My A-Rank Party - [EN Sub]", cover: "photo/I left my a rank party to help my former students.png", link: "anime/I Left My A-Rank Party - [EN Sub].html" },
+    "MOMENTARY LILY [EN Sub]": { title: "MOMENTARY LILY [EN Sub]", cover: "photo/unnamed (9).jpg", link: "anime/MOMENTARY LILY [EN Sub].html" },
+    "Let This Grieving Soul Retire [EN Sub]": { title: "Let This Grieving Soul Retire [EN Sub]", cover: "photo/Let This Grieving Soul Retire [EN Sub].jpg", link: "anime/Let This Grieving Soul Retire [EN Sub].html" },
+    "Ahiru no Sora [English Sub]": { title: "Ahiru no Sora [English Sub]", cover: "photo/Ahiru no Sora [English Sub].jpg", link: "anime/Ahiru no Sora [English Sub].html" },
+    "Blast of Tempest [English Sub]": { title: "Blast of Tempest [English Sub]", cover: "photo/Blast of Tempest [English Sub].jpg", link: "anime/Blast of Tempest [English Sub].html" },
+    "Monster Girl Doctor [English Sub]": { title: "Monster Girl Doctor [English Sub]", cover: "photo/Monster Girl Doctor [English Sub].jpg", link: "" },
+    "": { title: "", cover: "photo/7th Time Loop The Villainess Enjoys a Carefree Life Married to Her Worst Enemy.jpg", link: "" },
+    "": { title: "", cover: "photo/Beheneko The Elf-Girl.jpg", link: "" },
+    "": { title: "", cover: "photo/skeleton knight.jpg", link: "" },
+    "": { title: "", cover: "photo/BEELZEBUB [English Sub].jpg", link: "" },
+   
+   
     "Sabikui Bisco - [English Sub]": { title: "Sabikui Bisco - [English Sub]", cover: "photo/HD-wallpaper-anime-rust-eater-bisco-bisco-akaboshi-milo-nekoyanagi.jpg", link: "anime/Sabikui Bisco - [English Sub].html" },
      "The World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat": { title: "The World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat", cover: "photo/the-worlds-finest-assassin-banner-image.webp", link: "anime/The World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat [English Sub].html" },
      "Berserk of Gluttony": { title: "Berserk of Gluttony", cover: "photo/33359a587cfa74e4c2fa524ebc04b7a802d3b27b36cb5b24e0b9db8cb261a543.jpg", link: "anime/Berserk of Gluttony -  [English Sub].html" },
