--- a/index.2.html
+++ b/index.2.html
@@ -52,14 +52,12 @@
     "Let This Grieving Soul Retire [EN Sub]": { title: "Let This Grieving Soul Retire [EN Sub]", cover: "photo/Let This Grieving Soul Retire [EN Sub].jpg", link: "anime/Let This Grieving Soul Retire [EN Sub].html" },
     "Ahiru no Sora [English Sub]": { title: "Ahiru no Sora [English Sub]", cover: "photo/Ahiru no Sora [English Sub].jpg", link: "anime/Ahiru no Sora [English Sub].html" },
     "Blast of Tempest [English Sub]": { title: "Blast of Tempest [English Sub]", cover: "photo/Blast of Tempest [English Sub].jpg", link: "anime/Blast of Tempest [English Sub].html" },
-    "Monster Girl Doctor [English Sub]": { title: "Monster Girl Doctor [English Sub]", cover: "photo/Monster Girl Doctor [English Sub].jpg", link: "" },
-    "": { title: "", cover: "photo/7th Time Loop The Villainess Enjoys a Carefree Life Married to Her Worst Enemy.jpg", link: "" },
-    "": { title: "", cover: "photo/Beheneko The Elf-Girl.jpg", link: "" },
-    "": { title: "", cover: "photo/skeleton knight.jpg", link: "" },
-    "": { title: "", cover: "photo/BEELZEBUB [English Sub].jpg", link: "" },
-   
-   
-    "Sabikui Bisco - [English Sub]": { title: "Sabikui Bisco - [English Sub]", cover: "photo/HD-wallpaper-anime-rust-eater-bisco-bisco-akaboshi-milo-nekoyanagi.jpg", link: "anime/Sabikui Bisco - [English Sub].html" },
+    "Monster Girl Doctor [English Sub]": { title: "Monster Girl Doctor [English Sub]", cover: "photo/Monster Girl Doctor [English Sub].jpg", link: "anime/Monster Girl Doctor [English Sub].html" },
+    "7th Time Loop The Villainess Enjoys a Carefree Life Married to Her Worst Enemy": { title: "7th Time Loop The Villainess Enjoys a Carefree Life Married to Her Worst Enemy", cover: "photo/7th Time Loop The Villainess Enjoys a Carefree Life Married to Her Worst Enemy.jpg", link: "anime/7th Time Loop The Villainess Enjoys a Carefree Life Married to Her Worst Enemy.html" },
+    "Beheneko The Elf-Girl": { title: "Beheneko The Elf-Girl", cover: "photo/Beheneko The Elf-Girl.jpg", link: "anime/Beheneko The Elf-Girl.html" },
+    "Skeleton Knight in Another World -[English Sub]": { title: "Skeleton Knight in Another World -[English Sub]", cover: "photo/skeleton knight.jpg", link: "anime/Skeleton Knight in Another World -[English Sub].html" },
+    "BEELZEBUB [English Sub]": { title: "BEELZEBUB [English Sub]", cover: "photo/BEELZEBUB [English Sub].jpg", link: "anime/BEELZEBUB [English Sub].html" },
+     "Sabikui Bisco - [English Sub]": { title: "Sabikui Bisco - [English Sub]", cover: "photo/HD-wallpaper-anime-rust-eater-bisco-bisco-akaboshi-milo-nekoyanagi.jpg", link: "anime/Sabikui Bisco - [English Sub].html" },
      "The World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat": { title: "The World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat", cover: "photo/the-worlds-finest-assassin-banner-image.webp", link: "anime/The World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat [English Sub].html" },
      "Berserk of Gluttony": { title: "Berserk of Gluttony", cover: "photo/33359a587cfa74e4c2fa524ebc04b7a802d3b27b36cb5b24e0b9db8cb261a543.jpg", link: "anime/Berserk of Gluttony -  [English Sub].html" },
     "Cells at Work! [English Sub]": { title: "Cells at Work! [English Sub]", cover: "photo/Cells-at-work.avif", link: "anime/Cells at Work! [English Sub].html" },
