--- a/index.2.html
+++ b/index.2.html
@@ -48,7 +48,7 @@
     "spy x family ": { title: "spy x family", cover: "photo/unnamed (8).jpg", link: "anime/spy.html" },
     "dandadan": { title: "dandadan", cover: "photo/unnamed (9).jpg", link: "anime/Dan.html" },
     "I Left My A-Rank Party - [EN Sub]": { title: "I Left My A-Rank Party - [EN Sub]", cover: "photo/I left my a rank party to help my former students.png", link: "anime/I Left My A-Rank Party - [EN Sub].html" },
-    "MOMENTARY LILY [EN Sub]": { title: "MOMENTARY LILY [EN Sub]", cover: "photo/unnamed (9).jpg", link: "anime/MOMENTARY LILY [EN Sub].html" },
+    "MOMENTARY LILY [EN Sub]": { title: "MOMENTARY LILY [EN Sub]", cover: "photo/MOMENTARY LILY [EN Sub].jpg", link: "anime/MOMENTARY LILY [EN Sub].html" },
     "Let This Grieving Soul Retire [EN Sub]": { title: "Let This Grieving Soul Retire [EN Sub]", cover: "photo/Let This Grieving Soul Retire [EN Sub].jpg", link: "anime/Let This Grieving Soul Retire [EN Sub].html" },
     "Ahiru no Sora [English Sub]": { title: "Ahiru no Sora [English Sub]", cover: "photo/Ahiru no Sora [English Sub].jpg", link: "anime/Ahiru no Sora [English Sub].html" },
     "Blast of Tempest [English Sub]": { title: "Blast of Tempest [English Sub]", cover: "photo/Blast of Tempest [English Sub].jpg", link: "anime/Blast of Tempest [English Sub].html" },
