--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Google & Bing Verification -->
   <meta name="google-site-verification" content="p0QemVVXE7ylNB20f3L0xYlUMALMRVxDG2m6NusvxjE" />
   <meta name="msvalidate.01" content="D5783728BBCBDB79D12DC95D61B107CE" />
-
+<meta name="43b561d9bd68abebbf4f47557d1f97dbcf344e45" content="43b561d9bd68abebbf4f47557d1f97dbcf344e45" />
   <!-- Open Graph -->
   <meta property="og:title" content="Doosh Hub – Stream Anime in HD" />
   <meta property="og:description" content="Stream your favorite anime from Muse India in vibrant quality with custom neon themes and smooth controls." />
